# advent-of-code-2025

./: Cargo.toml  README.md
src/days/: day1.rs  day2.rs  day3.rs  day4.rs
